--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/runtime": "^7.0.0-beta.42",
     "bootstrap": "^4.1.1",
     "d3": "^4.13.0",
+    "d3-scale-chromatic": "^1.3.0",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.3.2",
     "react-d3-basic": "^1.6.11",
