--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-d3-basic": "^1.6.11",
     "react-dom": "^16.3.2",
     "reactstrap": "^6.0.1",
+    "recharts": "^1.0.0-beta.10",
     "twitter": "^1.7.1",
     "watson-developer-cloud": "^3.4.1"
   },
